[project]
name = "coastal_cascade"
requires-python = ">=3.10"
description = "The CoAStal Community-lAnDscape Evolution (CASCADE) model"
keywords = [
    "barrier islands",
    "coastal management",
    "economics",
    "overwash",
    "sea level rise",
]
authors = [
    { name = "Katherine Anarde" },
    { email = "kanarde@ncsu.edu" },
]
maintainers = [
    { name = "Katherine Anarde" },
    { email = "kanarde@ncsu.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "baked-brie",
    "barrier3d",
    "imageio",
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "pyyaml",
    "scipy",
]
dynamic = [
    "readme",
    "version",
]

[project.license]
text = "MIT"

[project.urls]
changelog = "https://raw.githubusercontent.com/UNC-CECL/cascade/master/CHANGES.rst"
documentation = "https://github.com/UNC-CECL/cascade"
homepage = "https://github.com/UNC-CECL/cascade"
repository = "https://github.com/UNC-CECL/cascade"

[project.optional-dependencies]
dev = [
    "nox",
]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-datadir",
    "pytest-xdist",
]

[build-system]
requires = [
    "setuptools",
]

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.dynamic.version]
attr = "cascade._version.__version__"

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "cascade*",
]

[tool.isort]
profile = "black"
known_first_party = [
    "cascade",
    "CASCADE",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "cascade",
    "tests",
]
norecursedirs = [
    ".*",
    "*.egg*",
    "build",
    "dist",
]
addopts = [
    "--ignore=setup.py",
    "--tb=native",
    "--strict",
    "--durations=16",
    "--doctest-modules",
    "-vvv",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
]

[tool.zest-releaser]
tag-format = "v{version}"
python-file-with-version = "cascade/_version.py"
